--- a/themes/terminal/layouts/partials/footer.html
+++ b/themes/terminal/layouts/partials/footer.html
@@ -7,7 +7,7 @@
       <div class="copyright">
         <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
     {{ end }}
-        <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
+        <span style="font-size: 75%;">:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
   </div>
 </footer>
